# playlist_recommendation_system

./: .gitignore  Dockerfile  README.md  base_model.ipynb  data_analysis.ipynb  evaluate.ipynb  merged_notebook.ipynb  preprocess_data.ipynb  pyproject.toml  split_data_set.ipynb  test_ab.ipynb  training.ipynb
data/: data_cleaning.py  data_processing.py  data_split.py  data_transforming.py
evaluation/: evaluator.py  metrics.py
models/: advanced_model.py  base_model.py  basic_model.py  training.py  wmf.py
prediction/: predict.py
service/: app.py
service/core/: advanced_model.py  basic_model.py  model_interface.py  recommender.py  service_models.py
