[project]
name = "playlist_recommendation_system"
version = "0.1.0"
description = "A system for recommending playlists"
requires-python = "~=3.10"

dependencies = [
    "pandas==2.2.1",
    "numpy==1.26.4",
    "torch==2.2.2",
    "Flask==3.1.0",
    "scikit-learn==1.4.2",
]

[project.optional-dependencies]
notebook = [
    "matplotlib==3.5.3",
    "seaborn==0.13.2",
]

[tool.setuptools]
packages = ["service", "prediction", "models", "evaluation"] 
